# nifty100-swing

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: eod.yml  premarket.yml
.streamlit/: secrets.toml.example
alerting/: formatter.py  telegram.py
analyzers/: context.py  event_driven.py  fii_dii_factor.py  fundamental.py  indicators.py  macro_factor.py  patterns.py  sector_factor.py  sentiment.py  technical.py  vix_factor.py
backtest/: costs.py  engine.py  metrics.py  walkforward.py
common/: calendar_nse.py  logging_config.py  paths.py  types.py
config/: earnings_calendar.csv  loader.py  nifty100.csv  niftymidcap150.csv  schema.py  settings.yaml
dashboard/: app.py  auth.py  components.py
data/: swing.db
data_ingestion/: base.py  events.py  fii_dii.py  fundamentals.py  macro.py  news.py  prices.py  sectors.py  validators.py  vix.py
scheduler/: run_eod.py
scoring/: composite.py  exits.py  gates.py  signal.py
scripts/: build_universe.py  run_backtest.py  score_study.py  seed_data.py
storage/: db.py  models.py
tests/: conftest.py  test_backtest.py  test_calendar.py  test_config.py  test_costs.py  test_data_quality.py  test_exits.py  test_gates.py  test_indicators.py  test_marketaux.py  test_news_matching.py  test_pipeline.py  test_premarket.py  test_scoring.py  test_sentiment_claude.py  test_watchlist.py
